<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="8dp"
    android:paddingLeft="16dp"
    app:paddingStart="16dp"
    app:paddingEnd="16dp"
    android:paddingTop="16dp"
    android:id="@+id/list_item">

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/news_section"
       tools:text="@string/section"
       android:textSize="20sp"
       android:textColor="@color/SectionColor"
       android:paddingBottom="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/Author"
            android:textSize="16sp"
            android:textColor="@color/Authorcolor"/>
        <TextView
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/AuthorName"
            android:textSize="16sp"
            android:id="@+id/Author"
            android:textColor="@color/Authorcolor"/>
    </LinearLayout>
    <TextView
        android:background="@color/TitleBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/news_title"
        tools:text="@string/title"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/Type"
            android:textSize="16sp"
            android:textColor="@color/NewsType"/>
        <TextView
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/newstype"
            android:id="@+id/news_type"
            android:textSize="16sp"
            android:textColor="@color/NewsType"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/Date"
            android:textSize="16sp"
            android:textColor="@color/newsDate"/>
        <TextView
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/newsdate"
            android:textSize="16sp"
            android:id="@+id/news_date"
            android:textColor="@color/newsDate"/>
    </LinearLayout>
</LinearLayout>